Subscriptions: Fix the left offset of the group name.
This commit fixes a bug reported on CZO where the group
name appears offset to the left by a few pixels compared
to the description and other settings.

See CZO:
<https://chat.zulip.org/#narrow/channel/9-issues/topic/name.20of.20user.20group.20is.20misaligned>

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1079,7 +1079,6 @@ h4.user_group_setting_subsection_title {
             position: relative;
             font-size: 1.5em;
             font-weight: 600;
-            margin-left: -3px;
             white-space: nowrap;
             max-width: 90%;
             flex: auto;
@@ -1121,7 +1120,7 @@ h4.user_group_setting_subsection_title {
 
         .large-icon {
             display: flex;
-            margin-right: 8px;
+            margin-right: 5px;
 
             &.hash::after {
                 top: -1px;
